#1659: * restructuring of the benchmarking algorithms * common interface for benchmarks * 'benchmark' class discovers benchmarking algorithms * added 'TimeLimit' and 'ChunkSize' parameters to benchmark
git-svn-id: https://src.heuristiclab.com/svn/core/branches/Benchmarking@6948 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.Benchmarks/3.3/HeuristicLab.Algorithms.Benchmarks-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.Benchmarks/3.3/HeuristicLab.Algorithms.Benchmarks-3.3.csproj
@@ -50,11 +50,12 @@
     <Compile Include="Benchmark.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Whetstone.cs" />
-    <Compile Include="Dhrystone.cs" />
-    <Compile Include="Linpack.cs" />
+    <Compile Include="DhrystoneBenchmark.cs" />
+    <Compile Include="IBenchmark.cs" />
+    <Compile Include="LinpackBenchmark.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WhetstoneAlgorithm.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
