#1479:  * Renamed symbolic classification sample.  * Updated samples unit test to use new features of the `SymbolicExpressionGrammar`.  * Updated symbolic regression and classification sample.  * Filtered symbolic in `AllowedChildSymbolsView`.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@6999 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
+++ b/sources/HeuristicLab.Optimizer/3.3/HeuristicLab.Optimizer-3.3.csproj
@@ -115,7 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Documents\GA_VRP.hl" />
-    <EmbeddedResource Include="Documents\SGP_SymbClass_Mammographic.hl" />
+    <EmbeddedResource Include="Documents\SGP_SymbClass.hl" />
     <EmbeddedResource Include="Documents\SGP_SymbReg.hl" />
     <EmbeddedResource Include="Documents\VNS_TSP.hl" />
     <EmbeddedResource Include="Documents\PSO_Schwefel.hl" />
