#1659 added an empty view for IBenchmark so that "No view available" won't be displayed in HL
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@7008 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Algorithms.Benchmarks.Views/3.3/HeuristicLab.Algorithms.Benchmarks.Views-3.3.csproj
+++ b/sources/HeuristicLab.Algorithms.Benchmarks.Views/3.3/HeuristicLab.Algorithms.Benchmarks.Views-3.3.csproj
@@ -98,6 +98,12 @@
     <Compile Include="BenchmarkView.Designer.cs">
       <DependentUpon>BenchmarkView.cs</DependentUpon>
     </Compile>
+    <Compile Include="IBenchmarkView.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="IBenchmarkView.Designer.cs">
+      <DependentUpon>IBenchmarkView.cs</DependentUpon>
+    </Compile>
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -161,6 +167,9 @@
   <ItemGroup>
     <EmbeddedResource Include="BenchmarkView.resx">
       <DependentUpon>BenchmarkView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IBenchmarkView.resx">
+      <DependentUpon>IBenchmarkView.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
